# compliance-tokens-manager

./: .gitignore  Anchor.toml  CLAUDE.md  Cargo.toml  package-lock.json
.claude/: settings.json
.claude/commands/: review-pr.md  test-coverage.md
.claude/hooks/: protect-files.sh
.github/workflows/: build.yml  ci.yml
docs/: architecture.md  tokenized-stocks-architecture.md
programs/security_tokens_manager/: Cargo.toml
programs/security_tokens_manager/src/: constants.rs  error.rs  instructions.rs  lib.rs  state.rs
programs/security_tokens_manager/src/instructions/: create_mint.rs  forced_transfer.rs  freeze_account.rs  initialize.rs  issue_tokens.rs  register_kyc.rs  revoke_kyc.rs  thaw_account.rs
programs/security_tokens_manager/tests/: test_initialize.rs
programs/transfer_hook/: Cargo.toml
programs/transfer_hook/src/: constants.rs  error.rs  lib.rs
programs/transfer_hook/src/instructions/: execute.rs  initialize_extra_account_metas.rs  mod.rs
