[package]
name = "security_tokens_manager"
version = "0.1.0"
description = "Token-2022 security token factory with KYC/AML compliance"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "security_tokens_manager"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []

[dependencies]
anchor-lang = { version = "1.0.0", features = ["init-if-needed"] }
base64ct = { workspace = true }
# Use the interface crate (not the full spl-token-2022 "6" impl) because it
# aligns with anchor-lang's solana-pubkey 3.0.0 dependency.
spl-token-2022-interface = "2.1.0"
spl-token-metadata-interface = "0.8"

[dev-dependencies]
litesvm = "0.10.0"
solana-message = "3.0.1"
solana-transaction = "3.0.2"
solana-signer = "3.0.0"
solana-keypair = "3.0.1"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
