[package]
name = "transfer_hook"
version = "0.1.0"
description = "KYC/AML transfer hook for Token-2022 security tokens"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "transfer_hook"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []

[dependencies]
anchor-lang = "1.0.0"
spl-token-2022-interface = "2.1.0"
spl-tlv-account-resolution = "0.11"
spl-transfer-hook-interface = "2.1.0"
# Import security_tokens_manager state types (KycRecord, TokenConfig).
security_tokens_manager = { path = "../security_tokens_manager", features = ["cpi"] }

[dev-dependencies]
litesvm = "0.10.0"
solana-message = "3.0.1"
solana-transaction = "3.0.2"
solana-signer = "3.0.0"
solana-keypair = "3.0.1"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
